test/typecheck/pass/bool_typ_pat/v1.sail
default Order dec

$include <prelude.sail>

val main : unit -> unit

function main() = {
    let x as bool('b) = true;
    let y : bool('b) = false;
}
