test/typecheck/fail/modify_immutable.sail
default Order dec
$include <prelude.sail>

val main : unit -> unit

function main() = {
    let x = 0b1;
    x = 0b1
}
